--- a/views/login.html
+++ b/views/login.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"
+        integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <p>Username</p>
     <input type="text" id="username" name="username">
     <p>password</p>
     <input type="password" id="password" name="password">
     <button type="button" id="btn">login</button>
-    
+
 </body>
 <script>
-     $("#btn").click(function(data) {
+    $("#btn").click(function (data) {
         var username = $("#username").val();
         var password = $("#password").val();
         //laasy dữ liệ từ server về mà không cần load lại trang
@@ -27,18 +30,22 @@
             //data: method get sẽ không dùng, method là post,put,delete,
             data: {
                 username: username,
-                password: password,  
+                password: password,
                 //giá trị mà người dùng cần gửi lên server
             }
-        }).then(function(data) {
-            if (data.error==false) {
-                window.location.href = "/api/admin"
-                
+        }).then(function (data) {
+            if (data.error == false) {
+                if (data.role == 'admin') {
+                    window.location.href = "/api/homeAdmin"
+                } else {
+                    window.location.href = "/api/home"
+                }
             } else {
                 alert(data.message)
             }
-            
+
         })
     })
 </script>
+
 </html>
