--- a/views/admin.html
+++ b/views/admin.html
@@ -69,6 +69,9 @@
 <style></style>
 
 <body>
+    <button type="button" id="btn-logout">
+        Logout
+      </button>
     <div class="search-user">
         <form>
             <input type="text" value="Nhập username" name="searchUser">
@@ -200,6 +203,17 @@
             // getPage();
         })
     }
+    $("#btn-logout").click(function(){
+      $.ajax({
+        url:"/api/logout",
+        type:'get'
+      }).then(function(data){
+        if(!data.error){
+          alert(data.message);
+          window.location.href = "/api/login"
+        }
+      })
+    });
 </script>
 
 </html>
